Fixed spectator icon moving behind agent image on left team

--- a/src/app/combat/playercard/playercard.component.scss
+++ b/src/app/combat/playercard/playercard.component.scss
@@ -214,16 +214,7 @@
   top: 0;
   width: 18px;
   height: 20px;
-
-  &.left {
-    @extend .spectator-icon-container;
-    left: 3px;
-  }
-
-  &.right {
-    @extend .spectator-icon-container;
-    right: 3px;
-  }
+  right: 3px;
 }
 
 .spectator-icon {
